--- a/src/main/resources/applcation.yml
+++ b/src/main/resources/applcation.yml
@@ -2,8 +2,8 @@ spring:
   profiles:
     default: local
 
-database:
-  url: jdbc:h2:mem:~/cafeKioskApplication
+  datasource:
+    url: jdbc:h2:mem:~/cafeKioskApplication
     driver-class-name: org.h2.Driver
     username: sa
     password:
